RB minor edits, good to go

--- a/journalMS/article.tex
+++ b/journalMS/article.tex
@@ -32,9 +32,9 @@
 %% - \title{} in title case
 %% - \Plaintitle{} without LaTeX markup (if any)
 %% - \Shorttitle{} with LaTeX markup (if any), used as running title
-\title{Fasano--Franceschini Test: an Implementation of a 2-Dimensional Kolmogorov--Smirnov in \proglang{R}}
-\Plaintitle{Fasano--Franceschini Test: an Implementation of a 2-Dimensional Kolmogorov--Smirnov in R}
-\Shorttitle{2-Dimensional Kolmogorov--Smirnov in \proglang{R}}
+\title{Fasano--Franceschini Test: an Implementation of a 2-Dimensional Kolmogorov--Smirnov test in \proglang{R}}
+\Plaintitle{Fasano--Franceschini Test: an Implementation of a 2-Dimensional Kolmogorov--Smirnov test in R}
+\Shorttitle{2-dimensional KS test in \proglang{R}}
 
 %% - \Abstract{} almost as usual
 \Abstract{
